# AFV-Native

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.md  Doxyfile  README.md  conanfile.py
examples/audiotest/: main.cpp
examples/dsptest/: main.cpp
examples/testclient/: TestClient.cpp  TestClient.h  main.cpp
include/afv-native/: Client.h  Log.h  event.h  utility.h
include/afv-native/afv/: APISession.h  EffectResources.h  RadioSimulation.h  RemoteVoiceSource.h  VoiceCompressionSink.h  VoiceSession.h
include/afv-native/afv/dto/: AuthRequest.h
include/afv-native/audio/: AudioDevice.h  BiQuadFilter.h  OutputMixer.h  PinkNoiseGenerator.h  SpeexPreprocessor.h  VHFFilterSource.h  WavSampleStorage.h  WhiteNoiseGenerator.h
include/afv-native/cryptodto/: Channel.h  UDPChannel.h
src/afv/: APISession.cpp  EffectResources.cpp  RadioSimulation.cpp  RemoteVoiceSource.cpp  VoiceSession.cpp
src/afv/dto/: AuthRequest.cpp
src/audio/: AudioDevice.cpp  FilterSource.cpp  OutputMixer.cpp  PortAudioAudioDevice.cpp  PortAudioAudioDevice.h  SineToneSource.cpp  SinkFrameSizeAdjuster.cpp  SoundIOAudioDevice.cpp  SourceFrameSizeAdjuster.cpp  SpeexPreprocessor.cpp  VHFFilterSource.cpp  WavFile.cpp  WavSampleStorage.cpp
src/core/: Client.cpp  Log.cpp
src/cryptodto/: UDPChannel.cpp
src/http/: EventTransferManager.cpp  Request.cpp
test/: main.cpp
test/audio/: test_SinkFrameSizeAdapter.cpp  test_SourceFrameSizeAdapter.cpp
test/cryptodto/: test_ChannelConfig.cpp  test_SequenceTest.cpp
test/http/: test_http_async.cpp  test_http_sync.cpp
test/util/: test_base64.cpp
